test/corpus/errors.txt
================================================================================
Invalid value type
================================================================================

cf.edge.server_port == "test"

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (numberlike_field
      (number_field))))

================================================================================
not supported comparison type
================================================================================

cf.edge.server_port contains 100

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (numberlike_field
      (number_field))
    (number)))
