test/corpus/fields.txt
================================================================================
mTLS client certificate field
================================================================================

cf.tls_client_auth.cert_fingerprint_sha256 eq "abc"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_field))
    (string)))

================================================================================
WAF content-scan array field indexed
================================================================================

cf.waf.content_scan.obj_sizes[0] gt 1000

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (numberlike_field
      (number_array
        (array_number_field))
      (number))
    (number)))

================================================================================
LLM boolean field standalone
================================================================================

cf.llm.prompt.pii_detected

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_field)))

================================================================================
JWT claim map access with any
================================================================================

any(http.request.jwt.claims.aud.values[*] eq "api")

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_func
      (array_func
        (string_array
          (array_string_field))
        (string)))))
