test/corpus/functions.txt
================================================================================
Simple func
================================================================================

to_string(cf.edge.server_port) eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (numberlike_field
          (number_field))))
    (string)))

================================================================================
variable arg count func
================================================================================

concat("String1",http.host,"String","2") == "String1 String2"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (string)
        (stringlike_field
          (string_field))
        (string)
        (string)))
    (string)))

================================================================================
recursive func
================================================================================

lower(to_string(cf.edge.server_port)) eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (stringlike_field
          (string_func
            (numberlike_field
              (number_field))))))
    (string)))

================================================================================
bit_slice func
================================================================================

bit_slice("udp", 64, 80) == 1

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (number_func
      (string)
      (number)
      (number))
    (number)))

================================================================================
is_timed_hmac_valid_v0 with optional args
================================================================================

is_timed_hmac_valid_v0("secret", http.request.uri, 100000, http.request.timestamp.sec, 8, "s")

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_func
      (string)
      (stringlike_field
        (string_field))
      (number)
      (numberlike_field
        (number_field))
      (number)
      (string))))

================================================================================
is_timed_hmac_valid_v0 required args only
================================================================================

is_timed_hmac_valid_v0("k", http.request.uri, 100000, http.request.timestamp.sec)

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_func
      (string)
      (stringlike_field
        (string_field))
      (number)
      (numberlike_field
        (number_field)))))

================================================================================
lookup_json_string with multiple keys
================================================================================

lookup_json_string(http.request.body.raw, "company", "name") eq "x"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (stringlike_field
          (string_field))
        (string)
        (string)))
    (string)))

================================================================================
has_key on a map field
================================================================================

has_key(http.request.headers, "x-foo")

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_func
      (map_string_array_field)
      (string))))

================================================================================
cidr returns an IP
================================================================================

cidr(ip.src, 24, 64) eq 1.2.3.0

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (ip_func
      (ip_field)
      (number)
      (number))
    (ipv4)))

================================================================================
substring with optional end
================================================================================

substring(http.request.body.raw, 2, 5) eq "x"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (stringlike_field
          (string_field))
        (number)
        (number)))
    (string)))

================================================================================
split returns an indexable array
================================================================================

split(http.request.body.raw, ",", 64)[0] eq "x"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_array
        (stringlike_field
          (string_field))
        (string)
        (number))
      (number))
    (string)))

================================================================================
is_jwt_valid
================================================================================

is_jwt_valid("51231d16-01f1-48e3-93f8-91c99e81288e")

--------------------------------------------------------------------------------

(source_file
  (boollike_field
    (bool_func
      (string))))

================================================================================
Indexing a function-call result
================================================================================

lookup_json_string(http.request.body.raw, "k")[0] eq "y"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (stringlike_field
          (string_field))
        (string))
      (number))
    (string)))
