test/corpus/ipv6.txt
================================================================================
IPv6 equality
================================================================================

ip.src eq 2001:db8::1

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (ip_field)
    (ipv6)))

================================================================================
IPv6 loopback compressed
================================================================================

ip.src ne ::1

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (ip_field)
    (ipv6)))

================================================================================
Mixed IPv4 and IPv6 set with CIDR ranges
================================================================================

ip.src in {2001:db8::/32 ::ffff:192.0.2.1 10.0.0.0/8}

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (ip_field)
    (ip_set
      (ip_range
        (ipv6))
      (ipv6)
      (ip_range
        (ipv4)))))
