test/corpus/parity.txt
================================================================================
IP ordering comparison
================================================================================

ip.src le 1.2.3.4

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (ip_field)
    (ipv4)))

================================================================================
Named list on a string field
================================================================================

http.host in $test

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (stringlike_field
      (string_field))
    (list)))

================================================================================
Named list on a number field
================================================================================

cf.edge.server_port in $ports

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (numberlike_field
      (number_field))
    (list)))

================================================================================
Byte-sequence literal
================================================================================

http.host eq 61:62:63

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_field))
    (bytes)))
