test/corpus/ranges.txt
================================================================================
IP set with CIDR and start..end range
================================================================================

ip.src in {192.0.2.0/24 198.51.100.3..198.51.100.7}

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (ip_field)
    (ip_set
      (ip_range
        (ipv4))
      (ip_bounds
        (ipv4)
        (ipv4)))))

================================================================================
IPv6 start..end range
================================================================================

ip.src in {2001:db8::1..2001:db8::ff}

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (ip_field)
    (ip_set
      (ip_bounds
        (ipv6)
        (ipv6)))))

================================================================================
Integer set with range
================================================================================

cf.edge.server_port in {80 8000..8009}

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (numberlike_field
      (number_field))
    (number_set
      (number)
      (number_bounds
        (number)
        (number)))))
